[gd_scene load_steps=3 format=3 uid="uid://vl8sy5yrd1qi"]

[ext_resource type="Script" path="res://UI/settings_menu.gd" id="1_7xhrb"]
[ext_resource type="Theme" uid="uid://t01s7s8smfhr" path="res://settings_theme.tres" id="1_uc0ss"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xhrb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_uc0ss")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_uc0ss")
tab_alignment = 1
clip_tabs = false

[node name="Graphics" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme = ExtResource("1_uc0ss")

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
theme = ExtResource("1_uc0ss")
text = "Fullscreen"
vertical_alignment = 1

[node name="AssignFullscreen" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/GridContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Apply"

[node name="Audio" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_uc0ss")

[node name="Controls" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_uc0ss")

[node name="ControlsBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Controls/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_uc0ss")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "OK"

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Reset all settings"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cancel"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/GridContainer/AssignFullscreen" to="." method="_toggle_graphics_setting" binds= ["windowMode"]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/ApplyButton" to="." method="_apply_settings"]
